[package]
name = "sm2"
version = "0.0.1"
authors = ["andelf <andelf@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SM2 signature"
documentation = "https://docs.rs/sm2"
repository = "https://github.com/andelf/rust-sca"
edition = "2018"
keywords = ["crypto", "sm2", "signature"]
categories = ["cryptography"]

[dependencies]
byteorder = "~1.3"
signature = "~0.3"

rand = "~0.7"
num-bigint = "~0.2"
num-traits = "~0.2"
num-integer = "~0.1"
lazy_static = "~1.4"
yasna = { version = "0.3", features = ["num-bigint"] }

sm3 = { version = "0.2", path = "../sm3" }
digest = "0.8"

[dev-dependencies]
hex = "0.4"